Modal: fix footer button spacing

--- a/@stellar/design-system/src/components/Modal/styles.scss
+++ b/@stellar/design-system/src/components/Modal/styles.scss
@@ -47,10 +47,7 @@
       width: 100%;
       margin-top: 1.5rem;
       margin-bottom: 1rem;
-
-      & > *:not(:first-child) {
-        margin-left: 0.5rem;
-      }
+      gap: 0.5rem;
     }
 
     .ModalBody {
